# WorldFlux

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.claude/agents/: model-developer.md  parity-guardian.md  training-pipeline.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  domain-health.yml  pages.yml  parity-official.yml  release.yml  s-grade-collect.yml  sbom.yml  sync-hf-space.yml
benchmarks/: __init__.py  benchmark_diffusion_imagination.py  benchmark_dreamerv3_atari.py  benchmark_tdmpc2_mujoco.py  common.py  evidence_dreamerv3_breakout.py  evidence_tdmpc2_halfcheetah.py
benchmarks/baselines/: dreamerv3_atari_quick.json  tdmpc2_mujoco_quick.json
benchmarks/parity/: dreamer_atari100k.yaml  tdmpc2_dmcontrol39.yaml
docker/: parity-environment.Dockerfile
docs/: CNAME  EXTENSIBILITY.md  index.md  roadmap.md
docs/adr/: 0001-core-boundaries.md  0002-protocol-vs-abc.md  0003-lazy-import-strategy.md  0004-dual-registry-separation.md  0005-adapter-pattern-component-wrapping.md  0006-callback-vs-event-bus.md  0007-replay-buffer-thread-safety.md
docs/api/: config-reference.md  factory-reference.md  factory.md  protocol-reference.md  protocol.md  state.md  training-reference.md  training.md
docs/architecture/: component-lifecycle.md  module-dependency.md  plugin-loading.md  training-loop.md
docs/getting-started/: concepts.md  cpu-success.md  installation.md  quickstart.md
docs/guides/: migration-v0.2-to-v3.md  model-evaluation.md  official-framework-native-backend-plan.md  training-observability.md
docs/operations/: maintainer-onboarding.md  proof-parity-runbook.md  release-runbook.md
docs/prd/: api-s-grade.md  architecture-s-grade.md  code-quality-s-grade.md  differentiation-s-grade.md  ml-correctness-s-grade.md  oss-readiness-s-grade.md  production-maturity-s-grade.md  scalability-s-grade.md
docs/reference/: api-stability.md  benchmarks.md  component-override-matrix.md  config.md  docs-stack.md  error-handling.md  hyperparameter-sensitivity.md  observation-action.md  paper-alignment-dreamerv3.md  paper-alignment-tdmpc2.md  parity.md  publishing.md  quality-gates.md  release-checklist.md  scaling.md  troubleshooting.md  tutorial-policy.md  unified-comparison.md  wasr.md
docs/roadmap/: 2026-q2-worldflux-quality-program.md
docs/tasks/: 2026-03-19-tdmpc2-terminal-target.md  2026-03-21-dreamer-image-objective.md  README.md
docs/tutorials/: dreamer-vs-tdmpc2.md  reproduce-dreamer-tdmpc2.md  train-first-model.md
examples/: README.md  collect_atari.py  collect_mujoco.py  compare_unified_training.py  plan_cem.py  quickstart_cpu_success.py  train_atari_dreamer.py  train_diffusion_model.py  train_dreamer.py  train_dreamer_mujoco.py  train_jepa.py  train_tdmpc2.py  train_tdmpc2_mujoco.py  train_token_model.py  validate_world_models_v23.py  visualize_imagination.py  worldflux_quickstart.ipynb  worldloom_quickstart.ipynb
examples/_shared/: __init__.py  viz.py
examples/plugins/: smoke_minimal_plugin.py
examples/plugins/custom_dynamics_plugin/: pyproject.toml
examples/plugins/custom_dynamics_plugin/src/worldflux_custom_dynamics/: __init__.py
examples/plugins/custom_encoder_plugin/: pyproject.toml
examples/plugins/custom_encoder_plugin/src/worldflux_custom_encoder/: __init__.py
examples/plugins/minimal_plugin/: pyproject.toml
examples/plugins/minimal_plugin/src/worldflux_minimal_plugin/: __init__.py
reports/: world_model_report_2026-03-01.md
reports/parity/: aggregate.json  cuda_jax_compatibility.md  suite_policy.json  upstream_lock.json
sample-dreamer/: README.md  dataset.py  train.py  worldflux.toml
sample-dreamer/dashboard/: index.html
sample-dreamer1/: README.md  dataset.py  inference.py  local_dashboard.py  train.py
sample-dreamer1/dashboard/: index.html
scripts/: README.md  add_spdx_headers.py  check_benchmark_regression.py  check_critical_coverage.py  check_docs_domain_tls.py  check_import_time.py  check_parity_suite_coverage.py  check_release_checklist_gate.py  check_release_metadata.py  classify_public_contract_diff.py  collect_s_grade_program_status.py  compute_wasr.py  create_demo_gif.py  estimate_quality_gate_runtime.py  export_public_contract_snapshot.py  generate_public_api_manifest.py  generate_release_parity_fixtures.py  generate_verification_report.py  launch_distributed.py  launch_parity_campaign.py  measure_quality_gates.py  migrate_v02_to_v3.py  preflight_parity_env.py  render_parity_dashboard.py  run_local_ci_gate.py  run_release_dry_run.py  run_sensitivity.py  update_public_contract_snapshot.py  validate_parity_artifacts.py
scripts/demo/: RECORDING_GUIDE.md  record_demo.sh  record_short.sh
scripts/e2e/: pip_flow_smoke.ps1  pip_flow_smoke.sh  source_tree_smoke.sh
scripts/launch_video/: production_guide.md  script.md  storyboard.md
scripts/parity/: _validation_utils.py  aws_distributed_orchestrator.py  aws_progress_audit.py  aws_quota_planner.py  contract_schema.py  fetch_oracles.sh  report_markdown.py  (+24 more)
spaces/: README.md  app.py  requirements.txt
strategy/: README.md  action-items.md  fundraising.md  gtm.md  market-analysis.md  prompt-engineering.md
tests/: __init__.py  conftest.py  test_bootstrap_env.py  test_cli.py  test_cli_eval.py  test_cli_models_compare.py  test_cli_theme.py  test_cloud_auth.py  test_config_loader.py  test_deprecation_shim.py  test_edge_cases.py  test_execution.py  test_factory.py  test_main_entrypoint.py  test_numerical_stability.py  test_public_contract_freeze.py  test_scaffold_generator.py  test_scaffold_runtime_behavior.py  test_training.py  test_utils.py  test_verify.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+379 files in other folders)
