[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worldflux-custom-encoder"
version = "0.1.0"
description = "Example: custom observation encoder plugin for WorldFlux"
requires-python = ">=3.10"
dependencies = ["worldflux>=0.1.0"]

[project.entry-points."worldflux.components"]
custom_encoder = "worldflux_custom_encoder:register_components"

[tool.setuptools.packages.find]
where = ["src"]
